ncmpc 0.33 - not yet released
* artist page: rename to "library"
* fix color configuration parser bug
* fix build failure when libpcre is not found
* remove support for liblircclient (only liblirc)
* build: require Meson 0.47
* build: use Meson option type `feature`
* build: remove obsolete option `tcp`
* build: add option to disable regular expression support

ncmpc 0.32 - (2018-10-05)
* fix crash bug on queue page
* fix crash bug on lyrics page
* fix off-by-one buffer overflow bug
* fix manpage installation directory
* fix build breakages with some ncurses builds
* work around GCC 4.9 build failure
* remove doxygen support
* new dependency: Boost
* remove dependency on GLib

ncmpc 0.31 - (2018-09-19)
* fix "No such song" in search screen
* fix progressbar when colors are disabled
* enable colors by default
* allow configuring per-style background colors
* keep current song in xterm title when MPD is paused
* load configuration from $XDG_CONFIG_HOME/ncmpc/config
* always show the screen list at the top
* fix memory leak
* require MPD 0.19

ncmpc 0.30 - (2018-04-04)
* fix crash after pressing ^W in search screen
* fix crash bug in chat screen
* fix completion list
* new color "progressbar-background"
* switch the code base to C++14
* build manual with Sphinx

ncmpc 0.29 - (2017-11-05)
* fix crash after losing MPD connection
* fix crash after DNS lookup error
* add Meson option "lyrics_plugin_dir"
* fallback libncurses detection without pkg-config

ncmpc 0.28 - (2017-09-21)
* fix crash on lyrics screen
* fix memory leak
* hide the MPD password from the queue screen title
* implement password for asynchronous connect
* build with Meson instead of autotools

ncmpc 0.27 - (2017-03-25)
* work around connect failure if /var/run/mpd/socket does not exist
* remove the status bar clock (option "display-time")
* fix assertion failure after connect failure
* several Windows build fixes

ncmpc 0.26 - (2017-03-20)
* require libmpdclient 2.9
* adapt to lirc 0.9.4