@@ -1,5 +1,6 @@
 ncmpc 0.33 - not yet released
 * artist page: rename to "library"
+* library page: make tag list configurable
 * fix color configuration parser bug
 * fix build failure when libpcre is not found
 * remove support for liblircclient (only liblirc)
